sumo/tests/netgen/errors/multiple_types/grid_and_spider/options.netgen
--grid --spider --grid.number=10 --grid.length=400 --output-file=net.net.xml
